tests/invalid_include.c.t.exp
invalid_include.c.t:1:9: error: Expected filename

@ include
         ^

